[gd_scene load_steps=4 format=3 uid="uid://icx1huokllwb"]

[ext_resource type="Script" uid="uid://dvw053bm0pmdv" path="res://resolution/resolution___content_scale_size.gd" id="1_41f0m"]
[ext_resource type="PackedScene" uid="uid://dsuaumbxcknhr" path="res://addons/godot_play_tool/helper/helper_0_0.tscn" id="2_2x4wa"]
[ext_resource type="PackedScene" uid="uid://ljh7garocuhe" path="res://addons/godot_play_tool/helper/helper_point.tscn" id="3_ixcbx"]

[node name="resolution___content_scale_size" type="Node2D"]
script = ExtResource("1_41f0m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ViewportSizeItemList" type="ItemList" parent="CanvasLayer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -125.0
offset_right = 300.0
offset_bottom = 125.0
grow_vertical = 2

[node name="helper_0_0" parent="." instance=ExtResource("2_2x4wa")]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Points" type="Node2D" parent="."]

[node name="helper_point" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(-640, 0)

[node name="helper_point2" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(-640, -360)

[node name="helper_point3" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(-640, 360)

[node name="helper_point4" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(640, 0)

[node name="helper_point5" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(640, -360)

[node name="helper_point6" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(640, 360)

[node name="helper_point7" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(0, -360)

[node name="helper_point8" parent="Points" instance=ExtResource("3_ixcbx")]
z_index = 4096
position = Vector2(0, 360)

[connection signal="item_selected" from="CanvasLayer/ViewportSizeItemList" to="." method="_on_viewport_size_item_list_item_selected"]
